# template-c

./: CMakeLists.txt  README.md  change-compiler.sh  config.cmake  copy-template.sh  display.c  files.txt  generate-cmakelists.sh  generate-flags.sh  generate-makefile.sh  main.c
